# microsandbox

./: Cargo.toml  Makefile  Microsandbox-vs-Docker.md  PROJECTS.md  README.md  SANDBOX_PROJECTS.md  SELF_HOSTING.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  tests_and_checks.yml  vet-ci.yml
docs/: index.md  retype.manifest  retype.yml
docs/cli/: index.md
docs/cli/commands/: add.md  exe.md  init.md  install.md  overview.md  run.md  server.md
docs/examples/: index.md
docs/getting-started/: index.md  installation.md  self-hosting.md
docs/guides/: api-keys.md  architecture.md  configuration.md  getting-started.md  index.md  mcp.md  projects.md  sandboxes.md
docs/mcp/: agents-microsandbox.md  ides-microsandbox.md  index.md  overview.md
docs/projects/: configuration.md  creating-projects.md  distribution.md  index.md  managing-sandboxes.md  monitoring.md  running-commands.md
docs/references/: api.md  cli.md  index.md  python-sdk.md  rpc-api.md  rust-sdk.md  typescript-sdk.md
docs/sdk/: code-execution.md  command-execution.md  index.md  metrics.md  sandbox-lifecycle.md
docs/sdks/: index.md
microsandbox-cli/: Cargo.toml
microsandbox-cli/lib/args/: msb.rs  msbrun.rs  msbserver.rs
microsandbox-core/: Cargo.toml
microsandbox-core/lib/cli/: styles.rs
microsandbox-core/lib/config/: defaults.rs  reference_path.rs
microsandbox-core/lib/management/: config.rs  db.rs  home.rs  image.rs  menv.rs  orchestra.rs  rootfs.rs  (+2 more)
microsandbox-portal/: Cargo.toml
microsandbox-portal/examples/: eval.rs  repl.rs  repl_timer.rs  rpc_repl.rs
microsandbox-portal/lib/: handler.rs  lib.rs  payload.rs  route.rs  state.rs
microsandbox-portal/lib/portal/: command.rs  mod.rs
microsandbox-portal/lib/portal/code/: engine.rs  mod.rs  node.rs  nodejs.rs  python.rs  rust.rs  types.rs
microsandbox-portal/lib/portal/repl/: engine.rs  nodejs.rs  python.rs  rust.rs  types.rs
microsandbox-server/: Cargo.toml
microsandbox-server/lib/: config.rs  error.rs  handler.rs  lib.rs  management.rs  mcp.rs  middleware.rs  payload.rs  route.rs  state.rs
microsandbox-utils/lib/: defaults.rs  env.rs  path.rs
scripts/: build_libkrun.sh  install_microsandbox.sh  publish_sdk_images.sh
sdk/: README.md
sdk-images/javascript/: Dockerfile  README.md
sdk-images/node/: Dockerfile
sdk-images/nodejs/: Dockerfile
sdk-images/playwright/: Dockerfile  README.md
sdk-images/pydata/: Dockerfile  README.md
sdk-images/python/: Dockerfile  README.md
sdk-images/rust/: Dockerfile  README.md
sdk/go/: README.md  config.go  execution.go  lang.go  msb.go  option.go  rpc_client.go
sdk/python/: DEVELOPMENT.md  README.md  pyproject.toml  setup.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: README.md  command.rs  metrics.rs  node.rs  python_simple.rs  repl.rs
sdk/rust/src/: builder.rs  command.rs  lib.rs  metrics.rs  node.rs  python.rs
(+20 files in other folders)
