[package]
name = "microsandbox-portal"
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[[bin]]
name = "python-portal"
path = "bin/python-portal.rs"

[[bin]]
name = "portal"
path = "bin/portal.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
microsandbox-utils = { workspace = true }
clap = { workspace = true }
crossbeam-channel = "0.5"
uuid = { version = "1.4", features = ["v4"] }
evcxr = { version = "0.19", optional = true }

[features]
default = ["python", "javascript", "rust"] # TODO: Remove javascript and rust
python = []
javascript = []
rust = ["evcxr"]
